[gd_scene load_steps=4 format=3 uid="uid://cffvsu8jf7y05"]

[ext_resource type="Texture2D" uid="uid://uxty3uhoc7un" path="res://assets/textures/burrel.png" id="1_3vygg"]
[ext_resource type="Script" uid="uid://btdagu8barh5a" path="res://scripts/main/chill_area.gd" id="1_b004p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3vygg"]
size = Vector3(3.6074219, 3.6396484, 5.394287)

[node name="chill_area" type="Node3D"]
script = ExtResource("1_b004p")

[node name="burrel" type="Sprite3D" parent="."]
transform = Transform3D(0.23541093, 0, 0, 0, 0.23541093, 0, 0, 0, 1, 0, 0, 0)
shaded = true
alpha_cut = 1
texture = ExtResource("1_3vygg")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5714978, 0.38780504)
light_color = Color(1, 0.4392157, 0, 1)
shadow_enabled = true
omni_range = 1.524

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_3vygg")

[node name="FlickerTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
